2007-06-25	kaffeetisch

	* t/GtkIconView.t
	* xs/GtkIconView.xs: Supply default values for scroll_to_path.
	Suggested by Jeffrey Ratcliffe.

	* exampels/cellrenderer_popup.pl: Slightly modified patch from
	Grant McLean makes sure the popup works properly when using simple
	clicks instead of click-and-hold.

2007-06-24	kaffeetisch

	* Gtk2.pm, MANIFEST, Makefile.PL, NEWS, README: Unstable release
	1.152.

2007-06-23	kaffeetisch

	* t/GtkMenuItem.t
	* xs/GtkMenuItem.xs: gtk_menu_item_set_submenu now accepts NULL
	for submenu.  Adjust the wrapper accordingly.

	* t/GtkTextBuffer.t
	* xs/GtkTextBuffer.xs: Wrap gtk_text_buffer_add_mark.

	* t/GtkTextMark.t
	* xs/GtkTextMark.xs: Wrap gtk_text_mark_new.

	* t/GtkTreeView.t
	* xs/GtkTreeViewColumn.xs
	* xs/GtkTreeView.xs: Wrap gtk_tree_view_column_get_tree_view,
	gtk_tree_view_convert_widget_to_tree_coords,
	gtk_tree_view_convert_tree_to_widget_coords,
	gtk_tree_view_convert_widget_to_bin_window_coords,
	gtk_tree_view_convert_bin_window_to_widget_coords,
	gtk_tree_view_convert_tree_to_bin_window_coords, and
	gtk_tree_view_convert_bin_window_to_tree_coords.

2007-06-22	kaffeetisch

	* t/GtkIconTheme.t: Remove unreliable result check for
	get_example_icon_name.

	* t/GtkListStore.t
	* t/GtkTreeStore.t
	* xs/GtkTreeStore.xs: Make sure Gtk2::ListStore's and
	Gtk2::TreeStore's move_before() and move_after() accept undef for
	the position parameter.  Reported by Dave Howorth.

2007-06-18	kaffeetisch

	* Gtk2.pm
	* maps-2.12
	* xs_files-2.12
	* t/GtkBuildable.t
	* t/GtkBuilder.t
	* xs/GtkBuildable.xs
	* xs/GtkBuilder.xs: Add support for GtkBuilder.

2007-06-17	kaffeetisch

	* t/PangoAttributes.t
	* t/PangoContext.t
	* t/PangoFont.t
	* t/PangoGravity.t
	* t/PangoLayout.t
	* t/PangoMatrix.t
	* t/PangoTypes.t
	* xs/PangoAttributes.xs
	* xs/PangoContext.xs
	* xs/PangoFont.xs
	* xs/PangoLayout.xs
	* xs/PangoMatrix.xs
	* xs/PangoTypes.xs: Refer to stable releases in version checks.

	* t/PangoCairo.t