@@ -1,3 +1,9 @@
+2007-07-27	muppetman
+
+	* xs/GtkAboutDialog.xs: Hide the AboutDialog on any reponse.
+	See http://svn.gnome.org/viewcvs/gtk%2B?revision=14919&view=revision
+	which changed the behavior of the dialog in gtk+ between 2.8 and 2.10.
+
 2007-06-25	kaffeetisch
 
 	* t/GtkIconView.t
